--- a/packages/myowoon/package.json
+++ b/packages/myowoon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@saju/manse",
+  "name": "@saju/myowoon",
   "version": "0.1.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
