chore: test 환경 설정

--- a/packages/manse/package.json
+++ b/packages/manse/package.json
@@ -31,6 +31,7 @@
     "typescript": "catalog:",
     "vitest": "catalog:",
     "@saju/tsconfig": "workspace:*",
-    "@saju/eslint-config": "workspace:*"
+    "@saju/eslint-config": "workspace:*",
+    "eslint": "catalog:"
   }
 }
