chore: init shared

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "workspaces": [
     "packages/*",
     "apps/*",
-    "shared/*",
-    "tooling/*"
+    "tooling/*",
+    "shared"
   ],
   "scripts": {
     "build": "turbo run build",
