--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,8 @@
 packages:
-  - shared/*
   - packages/*
   - apps/*
   - tooling/*
+  - shared
 catalog:
   "@types/node": 22.13.0
   "@eslint/js": ^9.4.0
