--- a/apps/web-service/package.json
+++ b/apps/web-service/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "catalog:",
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
     "vite": "^6.2.3",
