--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,14 +5,9 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      }
-    }
-  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "pnpm build --watch",
     "build": "tsup",
@@ -28,6 +23,7 @@
     "vitest": "catalog:",
     "@saju/tsconfig": "workspace:*",
     "@saju/eslint-config": "workspace:*",
+    "@saju/configs": "workspace:*",
     "eslint": "catalog:"
   }
 }
