--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,6 @@ packages:
   - packages/*
   - apps/*
   - tooling/*
-  - shared
 catalog:
   "@types/node": 22.13.0
   "@eslint/js": ^9.4.0
@@ -13,9 +12,10 @@ catalog:
   "eslint-plugin-unicorn": ^53.0.0
   "eslint-plugin-unused-imports": ^3.1.0
   "prettier": ^3.2.5
-  "typescript-eslint": ^7.18.0
+  "typescript-eslint": ^8.28.0
   "typescript": ^5.4.5
   "vitest": ^3.0.9
   "tsup": ^8.4.0
+  "@arethetypeswrong/cli": ^0.17.4
 onlyBuiltDependencies:
   - esbuild
