--- a/turbo.json
+++ b/turbo.json
@@ -11,11 +11,18 @@
     "typecheck": {
       "dependsOn": ["^typecheck"]
     },
+    "dev": {
+      "cache": false,
+      "persistent": true
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
     "test": {
       "dependsOn": ["^test"]
+    },
+    "test:attw": {
+      "dependsOn": ["^test:attw", "build"]
     },
     "clean": {
       "dependsOn": ["^clean"]
