--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "workspaces": [
     "packages/*",
     "apps/*",
-    "tooling/*"
+    "tooling/*",
+    "configs"
   ],
   "scripts": {
     "build": "turbo run build",
